@@ -76,10 +76,10 @@ class plgUserContactCreator extends JPlugin
 			// now replace it in together
 			$contact->webpage = str_replace($search_array, $replace_array, $autowebpage);
 		}
-
-		$result = $contact->store();
-		if(!$result)
-		{
+		if($contact->check()) {
+			$result = $contact->store();
+		}
+		if(!(isset($result)) || !$result) {
 			JError::raiseError(42, JText::sprintf('Failed to update contact: %s', $contact->getErrorMsg()));
 		}
 	}
